Tue Feb  3 08:01:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_write): use of cast expressions as lvalues
	  is deprecated.

Tue Feb  3 07:57:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb (in_pktinfo, in6_pktinfo),
	  ext/socket/ancdata.c: defined in w32api/ws2tcpip.h on cygwin but
	  cannot compile for some reason.

Tue Feb  3 07:02:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/langinfo.c (nl_langinfo_codeset): accepts iso-8859
	  fragment.  [ruby-core:21757]

Tue Feb  3 07:01:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb (patchlevel): config.status may not contain
	  PATCHLEVEL even if other version numbers exist.

Mon Feb  2 23:43:00 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (Init_addrinfo): add AddrInfo#to_s as an
	  alias of AddrInfo#to_sockaddr.

	* ext/socket/option.c (Init_sockopt): add Socket::Option#to_s as an
	  alias of Socket::Option#data.

	  [ruby-dev:37873]

Mon Feb  2 21:04:13 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_sort_by_bang): RDoc update.  [ruby-core:21742]

Mon Feb  2 20:49:24 2009  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c: Introduce id_each to save rb_itern() and SYM2ID()
	  calls.

Mon Feb  2 19:55:51 2009  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_addrinfo.rb: use AddrInfo.getaddrinfo to generate
	  IPv6 address.  AddrInfo.ip generates IPv4 address for IPv4 mapped
	  IPv6 address if --with-lookup-order-hack=INET.
	  [ruby-dev:37868]

Mon Feb  2 19:17:16 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* doc/NEWS-1.9.1: typo fixed: collect_all -> collect.
	   [ruby-core:21706]

Mon Feb  2 17:23:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (dir.o, win32.o): depend on win32/dir.h.

Mon Feb  2 17:13:46 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* mkconfig.rb: patchlevel is sometimes minus.

	* win32/resource.rb: ditto.
