@@ -2171,7 +2171,6 @@ AC_SUBST(BUILTIN_TRANSOBJS)
 PACKAGE=$RUBY_INSTALL_NAME
 AC_SUBST(PACKAGE)
 
-AC_CONFIG_FILES(Doxyfile)
 AC_CONFIG_FILES($FIRSTMAKEFILE)
 AC_CONFIG_FILES(Makefile, [{
 	if test -d "$srcdir/.svn"; then
